Addition of new practice commands

--- a/PythonPracticeSession.ipynb
+++ b/PythonPracticeSession.ipynb
@@ -4580,8 +4580,662 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "df7210c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I have eaten99burritos'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'I have eaten' + '99' + 'burritos'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bbf92c3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v\n",
+      "a\n",
+      "r\n",
+      "i\n",
+      "N\n"
+     ]
+    }
+   ],
+   "source": [
+    "## reverse a string without using reversed() and for loop\n",
+    "n = \"Nirav\"\n",
+    "count = len(n) - 1\n",
+    "while count >= 0:\n",
+    "    print(n[count])\n",
+    "    count -= 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "33f118be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vowel i present at index 0\n",
+      "vowel e present at index 2\n",
+      "vowel o present at index 4\n",
+      "vowel u present at index 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Find a vowels presence into string and print their index\n",
+    "str_value = \"iNeroun\"\n",
+    "vowels=\"AaEeIiOoUu\"\n",
+    "\n",
+    "for i in range(0, len(str_value)):\n",
+    "    if str_value[i] in vowels:\n",
+    "        print('vowel {} present at index {}'.format(str_value[i], i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "dcc55280",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please provide your string:test\n",
+      "Provided string is \"Not Palindrom\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "## find entered string is palindrom OR not palindrom\n",
+    "entered_value = input('Please provide your string:')\n",
+    "reversed_str = entered_value[::-1]\n",
+    "if entered_value == reversed_str :\n",
+    "    print('Provided string is \"Palindrom\"')\n",
+    "else :\n",
+    "    print('Provided string is \"Not Palindrom\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e703e688",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'l' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/fl/z22jjgns4l57m82gbk62h2cw0000gn/T/ipykernel_1497/3723490112.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'l' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "62d3077d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [1,2,3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "de156364",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.append('sudh')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "82ecaa96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 'sudh']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "63d72465",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.extend('nirav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c45617aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 'sudh', 'n', 'i', 'r', 'a', 'v']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6f08f202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " my_list_1 = list('Nirav Joshi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "07481c48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['N', 'i', 'r', 'a', 'v', ' ', 'J', 'o', 's', 'h', 'i']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1cefa16b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "h\n",
+      "s\n",
+      "o\n",
+      "J\n",
+      " \n",
+      "v\n",
+      "a\n",
+      "r\n",
+      "i\n",
+      "N\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, len(my_list_1)):\n",
+    "    print(my_list_1.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1129d544",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(my_list_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "3fe99afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [\n",
+    "    [1,2,3],\n",
+    "    [11,12,'b','b','b','b'],\n",
+    "    [21,'t',22],\n",
+    "    [4,5,6],\n",
+    "    [7,8,9],\n",
+    "    'demo',\n",
+    "    12.5\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f806b1fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3],\n",
+       " [11, 12, 'b', 'b', 'b', 'b'],\n",
+       " [21, 't', 22],\n",
+       " [4, 5, 6],\n",
+       " [7, 8, 9],\n",
+       " 'demo',\n",
+       " 12.5]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "6181a457",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [11, 12, 'b', 'b', 'b', 'b'], [21, 't', 22, 'a', 33, 'bt'], [3, 4], [6, 7], (2+1j), [4, 5, 6], [7, 8, 9], 'demo', 12.5]\n",
+      "---------\n",
+      "b  at index l[ 1 ][ 2 ]\n",
+      "b  at index l[ 1 ][ 3 ]\n",
+      "b  at index l[ 1 ][ 4 ]\n",
+      "b  at index l[ 1 ][ 5 ]\n",
+      "t  at index l[ 2 ][ 1 ]\n",
+      "a  at index l[ 2 ][ 3 ]\n",
+      "bt  at index l[ 2 ][ 5 ]\n",
+      "modified list post string element deletion : [[1, 2, 3], [11, 12], [21, 22, 33], [3, 4], [6, 7], (2+1j), [4, 5, 6], [7, 8, 9], 'demo', 12.5]\n",
+      "---------\n",
+      "2nd element of each nested list is  2\n",
+      "2nd element of each nested list is  22\n",
+      "2nd element of each nested list is  5\n",
+      "2nd element of each nested list is  8\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [\n",
+    "    [1,2,3],\n",
+    "    [11,12,'b','b','b','b'],\n",
+    "    [21,'t',22, 'a', 33, 'bt'],\n",
+    "    [4,5,6],\n",
+    "    [7,8,9],\n",
+    "    'demo',\n",
+    "    12.5\n",
+    "]\n",
+    "#Q1\n",
+    "l.insert(3, [3,4])\n",
+    "l.insert(4, [6,7])\n",
+    "l.insert(5, 2+1j)\n",
+    "print(l)\n",
+    "print('---------')\n",
+    "\n",
+    "#Q2\n",
+    "for i in range(0, len(l)):\n",
+    "        if type(l[i]) == list:\n",
+    "            delete_index_mark = []\n",
+    "            for j in range(0, len(l[i])):\n",
+    "                if type(l[i][j]) == str:\n",
+    "                    print(l[i][j] ,' at index l[', i, '][', j,']')\n",
+    "                    delete_index_mark.append(l[i][j])\n",
+    "            for k in range(0, len(delete_index_mark)):\n",
+    "                l[i].remove(delete_index_mark[k])\n",
+    "\n",
+    "print('modified list post string element deletion :', l)\n",
+    "print('---------')\n",
+    "            \n",
+    "#Q3\n",
+    "for i in range(0, len(l)):\n",
+    "        if type(l[i]) == list:\n",
+    "            if len(l[i]) > 2:\n",
+    "                print('2nd element of each nested list is ', l[i][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "25eeaa90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## list comprihension demo ##\n",
+    "[i for i in range(0,10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "5c214944",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## prepare comprihensive list which has only even numbers ##\n",
+    "[i for i in range(0,20) if i%2 == 0 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "e9884592",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['even', 'odd', 'even', 'odd', 'even', 'odd', 'even', 'odd', 'even', 'odd']"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[\"even\" if i%2 == 0 else \"odd\" for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "8d433cb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 2], [0, 1, 2], [0, 1, 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Matrix generation ##\n",
+    "matrix = []\n",
+    "for i in range(3):\n",
+    "    matrix.append([])\n",
+    "    for j in range(3):\n",
+    "        matrix[i].append(j)\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "e3e0e711",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 2], [0, 1, 2], [0, 1, 2]]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Matrix generation using comprehensive for loop ##\n",
+    "[[j for j in range(3)]for i in range(3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a38ed4ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'my_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/fl/z22jjgns4l57m82gbk62h2cw0000gn/T/ipykernel_889/376848641.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmy_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'my_list' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1636b2d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = [1,2,3,4,['nirav',0 ,1,2,3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "08645b86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, ['nirav', 0, 1, 2, 3]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0696981f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list.extend(\"joshi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f4c2bb19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, ['nirav', 0, 1, 2, 3], 'j', 'o', 's', 'h', 'i']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "acf26af7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list.index(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cd9748d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['nirav', 0, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "73f216fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list.insert(-1, 'abc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d2ab9bd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, ['nirav', 0, 1, 2, 3], 'j', 'o', 's', 'h', 'abc', 'i']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dec297e2",
    "metadata": {},
    "outputs": [],
    "source": []
