Updated practice samples

--- a/PythonPracticeSession.ipynb
+++ b/PythonPracticeSession.ipynb
@@ -4580,8 +4580,575 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "df7210c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "s = \"this is python basic class\"\n",
+    "for i in s:\n",
+    "    count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c72db4f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "s\n",
+      "a\n",
+      "l\n",
+      "c\n",
+      " \n",
+      "c\n",
+      "i\n",
+      "s\n",
+      "a\n",
+      "b\n",
+      " \n",
+      "n\n",
+      "o\n",
+      "h\n",
+      "t\n",
+      "y\n",
+      "p\n",
+      " \n",
+      "s\n",
+      "i\n",
+      " \n",
+      "s\n",
+      "i\n",
+      "h\n",
+      "t\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(s) - 1, -1 , -1):\n",
+    "    print(s[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6d3fb94e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "s\n",
+      "a\n",
+      "l\n",
+      "c\n",
+      " \n",
+      "c\n",
+      "i\n",
+      "s\n",
+      "a\n",
+      "b\n",
+      " \n",
+      "n\n",
+      "o\n",
+      "h\n",
+      "t\n",
+      "y\n",
+      "p\n",
+      " \n",
+      "s\n",
+      "i\n",
+      " \n",
+      "s\n",
+      "i\n",
+      "h\n",
+      "t\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = len(s) - 1\n",
+    "while count >= 0:\n",
+    "    print(s[count])\n",
+    "    count -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7a64b5ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vowel: i\n",
+      "consonant: N\n",
+      "vowel: e\n",
+      "vowel: u\n",
+      "consonant: r\n",
+      "vowel: o\n",
+      "consonant: n\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'iNeuron'\n",
+    "vowel = 'AaEeIiOoUu'\n",
+    "for i in range(len(s)):\n",
+    "    if s[i] in vowel:\n",
+    "        print('vowel:',s[i])\n",
+    "    else:\n",
+    "        print('consonant:',s[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2f627275",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s in 'su'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bc72b648",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter txt:mom\n",
+      "<reversed object at 0x0000025427B5B6D0>\n",
+      "not palindrom\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input('Please enter txt:')\n",
+    "rs = s[::-1]\n",
+    "if s == rs:\n",
+    "    print('Palindrom')\n",
+    "else:\n",
+    "    print('not palindrom')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d3c04667",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palindrom\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = ',madam,'\n",
+    "flag = True\n",
+    "for i in range(len(word)):\n",
+    "    if word[i] != word[len(word) - i - 1]:\n",
+    "        flag = False\n",
+    "        break\n",
+    "    else:\n",
+    "        continue\n",
+    "        \n",
+    "print('Palindrom') if flag else print('Not Palindrom')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "453c9e23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {'india':'IN', 'canada':'CA', 'china':'CH', 'United States': 'US'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "43129471",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'india': 'IN', 'canada': 'CA', 'china': 'CH', 'United States': 'US'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0dcff512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list[{'india': 'IN', 'canada': 'CA', 'china': 'CH', 'United States': 'US'}]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list[d]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "586f0a98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['india', 'canada', 'china', 'United States']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8a73adfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'france' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2068/2669227368.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'france'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: 'france' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "list(d).index('france')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c5b35c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'india' in d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2764fc54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<=5  ['india', 'china']\n",
+      ">5  ['canada', 'United States']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = []\n",
+    "l2 = []\n",
+    "for i in d:\n",
+    "    l1.append(i) if len(i) <= 5 else l2.append(i)\n",
+    "\n",
+    "print('<=5 ', l1)\n",
+    "print('>5 ', l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8901570a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<5  ['U', 'n', 'i', 't', 'e', 'd', ' ', 'S', 't', 'a', 't', 'e', 's']\n",
+      ">5  []\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = d.values()\n",
+    "l1 = []\n",
+    "l2 = []\n",
+    "for i in i:\n",
+    "    if len(i) < 5:\n",
+    "        l1.append(i)\n",
+    "    else:\n",
+    "        l2.append(i)\n",
+    "\n",
+    "print('<5 ', l1)\n",
+    "print('>5 ', l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b7d9a9bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['IN', 'CA', 'CH', 'US'])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "bf6c5c96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_1 = {\n",
+    "        'ineuron': {'a':14, 'b': 10, 'c': 4},'course':{'d':45, 'e': 34, 'f': 1 }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "19f699ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ineuron', 'course']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(d_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "77e29924",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([{'a': 14, 'b': 10, 'c': 4}, {'d': 45, 'e': 34, 'f': 1}])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_1.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "1192b57f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############ One way ################\n",
+      "[14, 45]\n",
+      "############ Another way ################\n",
+      "14\n",
+      "45\n",
+      "############ Another way using key ################\n",
+      "14\n",
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('############ One way ################')\n",
+    "md = d_1.values()\n",
+    "maxValue = []\n",
+    "for d in md:\n",
+    "    maxValue.append(max(d.values()))\n",
+    "print(maxValue)\n",
+    "\n",
+    "print('############ Another way ################')\n",
+    "for i in d_1.values():\n",
+    "    print(max(i.values()))\n",
+    "    \n",
+    "print('############ Another way using key ################')    \n",
+    "for i in d_1.keys():\n",
+    "    print(max(d_1[i].values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "b0b646eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_1 = {\n",
+    "        'ineuron': {'a':14, 'b': 10, 'c': 4, 'd':99999999, 'e':1+8j, 'f':99999999.66568},'course':{'d':45, 'e': 34, 'f': 1 },\n",
+    "        'g':1+8j, 'h':[45,6,7,8,9,3,9999,1+8j], 'i':(45,3,2,9080899, 1+8j), 'k':'sudh'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "44de3733",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ineuron': {'a': 14, 'b': 10, 'c': 4},\n",
+       " 'course': {'d': 45, 'e': 34, 'f': 1},\n",
+       " 'g': 34,\n",
+       " 'h': [45, 6, 7, 8, 9, 3],\n",
+       " 'i': (45, 3, 2),\n",
+       " 'k': 'sudh'}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "fe76ba98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99999999.66568\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxValue = []\n",
+    "for d in d_1.values():\n",
+    "    if type(d) == dict :\n",
+    "        for i in d.values():\n",
+    "            if type(i) == int or type(i) == float:\n",
+    "                maxValue.append(i)\n",
+    "    elif type(d) == int :\n",
+    "        maxValue.append(d)\n",
+    "    elif type(d) == list or type(d) == tuple:\n",
+    "        for i in d:\n",
+    "            if type(i) == int or type(i) == float:\n",
+    "                maxValue.append(i)\n",
+    "print(max(set(maxValue)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b2ef3dc",
    "metadata": {},
    "outputs": [],
    "source": []
