Adding solution for assignment 8

--- a/ChristmasVacationAssignment.ipynb
+++ b/ChristmasVacationAssignment.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3f5eda7b",
    "metadata": {},
    "outputs": [
@@ -282,42 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChristmasVacationAssignment.ipynb\n",
-      "DateTimeCalculationDemo.ipynb\n",
-      "PythonCommandTryOuts.ipynb\n",
-      "PythonPracticeSession.ipynb\n",
-      "README.md\n",
-      "Summation.ipynb\n",
-      "SummationOfTwoNumbers.ipynb\n",
-      "UserInputDemo.ipynb\n",
-      "config\n",
-      "description\n",
-      "HEAD\n",
-      "index\n",
-      "packed-refs\n",
-      "applypatch-msg.sample\n",
-      "commit-msg.sample\n",
-      "fsmonitor-watchman.sample\n",
-      "post-update.sample\n",
-      "pre-applypatch.sample\n",
-      "pre-commit.sample\n",
-      "pre-merge-commit.sample\n",
-      "pre-push.sample\n",
-      "pre-rebase.sample\n",
-      "pre-receive.sample\n",
-      "prepare-commit-msg.sample\n",
-      "push-to-checkout.sample\n",
-      "update.sample\n",
-      "exclude\n",
-      "HEAD\n",
-      "main\n",
-      "HEAD\n",
-      "pack-ef54b236387f5f315d5824bc5efefa44d18a277b.idx\n",
-      "pack-ef54b236387f5f315d5824bc5efefa44d18a277b.pack\n",
-      "main\n",
-      "HEAD\n",
-      "ChristmasVacationAssignment-checkpoint.ipynb\n",
-      "UserInputDemo-checkpoint.ipynb\n"
+      "List of all file present into current directories: ['ChristmasVacationAssignment.ipynb', 'DateTimeCalculationDemo.ipynb', 'PythonCommandTryOuts.ipynb', 'PythonPracticeSession.ipynb', 'README.md', 'Summation.ipynb', 'SummationOfTwoNumbers.ipynb', 'UserInputDemo.ipynb', 'COMMIT_EDITMSG', 'config', 'description', 'HEAD', 'index', 'packed-refs', 'tgitchangelist', 'applypatch-msg.sample', 'commit-msg.sample', 'fsmonitor-watchman.sample', 'post-update.sample', 'pre-applypatch.sample', 'pre-commit.sample', 'pre-merge-commit.sample', 'pre-push.sample', 'pre-rebase.sample', 'pre-receive.sample', 'prepare-commit-msg.sample', 'push-to-checkout.sample', 'update.sample', 'exclude', 'HEAD', 'main', 'HEAD', 'main', '4aabb4bc23c35a3a258955087d9f6c855c56bd', '80a928a52a81c0f1de90704b42de395daf0121', 'ac934bb6e102849f2a3d03f3b97270c1ccec10', 'pack-ef54b236387f5f315d5824bc5efefa44d18a277b.idx', 'pack-ef54b236387f5f315d5824bc5efefa44d18a277b.pack', 'main', 'HEAD', 'main', 'ChristmasVacationAssignment-checkpoint.ipynb', 'UserInputDemo-checkpoint.ipynb']\n"
      ]
     }
    ],
@@ -327,42 +292,82 @@
     "import os\n",
     "import os.path\n",
     "\n",
+    "# to store files in a list\n",
+    "def get_list_of_files(path):\n",
+    "    list_of_file = []\n",
+    "    list_of_dirs = [] \n",
+    "    # dirs=directories\n",
+    "    for (root, dirs, file) in os.walk(path):\n",
+    "        if len(dirs) > 0:\n",
+    "            list_of_dirs.append(dirs)\n",
+    "        for f in file:\n",
+    "            list_of_file.append(f)\n",
+    "    print('List of all file present into current directories:', list_of_file)\n",
+    "\n",
+    "\n",
     "# This is my path\n",
     "path=\"C://NJ//Learning//Python//python-practice-examples\"\n",
-    " \n",
-    "# to store files in a list\n",
-    "list = []\n",
-    " \n",
-    "# dirs=directories\n",
-    "for (root, dirs, file) in os.walk(path):\n",
-    "    for f in file:\n",
-    "        print(f)"
+    "get_list_of_files(path)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fe3f538b",
+   "execution_count": 4,
+   "id": "8d291860",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'ntpath' has no attribute 'filename'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\NIRAVJ~1\\AppData\\Local\\Temp/ipykernel_2548/939383712.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'C:\\\\NJ\\\\Learning\\\\Python\\\\python-practice-examples'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'ntpath' has no attribute 'filename'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"platform\": \"Windows\", \"platform-release\": \"10\", \"platform-version\": \"10.0.22000\", \"architecture\": \"AMD64\", \"hostname\": \"NJ-Lenovo\", \"ip-address\": \"192.168.56.1\", \"mac-address\": \"cc:6b:1e:a2:6e:7c\", \"processor\": \"AMD64 Family 25 Model 80 Stepping 0, AuthenticAMD\", \"ram\": \"32 GB\"}\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "## Assignment 8\n",
+    "import wmi\n",
+    "import platform,socket,re,psutil,json,uuid\n",
+    "\n",
+    "## get system info using standard platform , psutil library\n",
+    "def getSystemInfo():\n",
+    "    try:\n",
+    "        info={}\n",
+    "        info['platform']=platform.system()\n",
+    "        info['platform-release']=platform.release()\n",
+    "        info['platform-version']=platform.version()\n",
+    "        info['architecture']=platform.machine()\n",
+    "        info['hostname']=socket.gethostname()\n",
+    "        info['ip-address']=socket.gethostbyname(socket.gethostname())\n",
+    "        info['mac-address']=':'.join(re.findall('..', '%012x' % uuid.getnode()))\n",
+    "        info['processor']=platform.processor()\n",
+    "        info['ram']=str(round(psutil.virtual_memory().total / (1024.0 **3)))+\" GB\"\n",
+    "        return json.dumps(info)\n",
+    "    except Exception as e:\n",
+    "        logging.exception(e)\n",
+    "\n",
+    "json.loads(getSystemInfo())\n",
+    "\n",
+    "## Get system configuration info using WMI library\n",
+    "def get_system_configuration_using_wmi():\n",
+    "    c = wmi.WMI()\n",
+    "    my_system = c.Win32_ComputerSystem()[0]\n",
+    "    total_RAM = round(int(list({my_system.TotalPhysicalMemory})[0])/(1024*1024*1024))\n",
+    "    print(f\"Manufacturer: {my_system.Manufacturer}\")\n",
+    "    print(f\"Model: {my_system. Model}\")\n",
+    "    print(f\"Name: {my_system.Name}\")\n",
+    "    print(f\"NumberOfProcessors: {my_system.NumberOfProcessors}\")\n",
+    "    print(f\"SystemType: {my_system.SystemType}\")\n",
+    "    print(f\"SystemFamily: {my_system.SystemFamily}\")\n",
+    "    print(f\"Total RAM (in GB): \", total_RAM)\n",
+    "\n",
+    "#get_system_configuration()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d291860",
+   "id": "800b5663",
    "metadata": {},
    "outputs": [],
    "source": []
