--- a/ChristmasVacationAssignment.ipynb
+++ b/ChristmasVacationAssignment.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8d291860",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"platform\": \"Windows\", \"platform-release\": \"10\", \"platform-version\": \"10.0.22000\", \"architecture\": \"AMD64\", \"hostname\": \"NJ-Lenovo\", \"ip-address\": \"192.168.56.1\", \"mac-address\": \"cc:6b:1e:a2:6e:7c\", \"processor\": \"AMD64 Family 25 Model 80 Stepping 0, AuthenticAMD\", \"ram\": \"32 GB\"}\n"
+      "{'platform': 'Windows', 'platform-release': '10', 'platform-version': '10.0.22000', 'architecture': 'AMD64', 'hostname': 'NJ-Lenovo', 'ip-address': '192.168.56.1', 'mac-address': 'cc:6b:1e:a2:6e:7c', 'processor': 'AMD64 Family 25 Model 80 Stepping 0, AuthenticAMD', 'ram': '32 GB'}\n"
      ]
     }
    ],
@@ -346,7 +346,7 @@
     "    except Exception as e:\n",
     "        logging.exception(e)\n",
     "\n",
-    "json.loads(getSystemInfo())\n",
+    "print(json.loads(getSystemInfo()))\n",
     "\n",
     "## Get system configuration info using WMI library\n",
     "def get_system_configuration_using_wmi():\n",
@@ -367,10 +367,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "800b5663",
+   "id": "6cae5fac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "c"
+   ]
   }
  ],
  "metadata": {
